log
Thu, Apr 17, 2025  9:38:24 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Fri, Apr 18, 2025  1:18:23 PM: 
 hashmap.c | 85 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 84 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
52a1b46
Fri, Apr 18, 2025  1:38:03 PM: 
 tests:  8|3
total_score: 40/70
525fba3
Fri, Apr 18, 2025  1:38:34 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
afe0128
Fri, Apr 18, 2025  1:55:10 PM: 
 hashmap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:176:10: error: unused variable 'originalCurrent' [-Werror=unused-variable]
     long originalCurrent = i;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
9a057d5
Fri, Apr 18, 2025  1:55:36 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:176:10: error: unused variable 'originalCurrent' [-Werror=unused-variable]
     long originalCurrent = i;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
d92b4bc
Fri, Apr 18, 2025  1:55:42 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
66be336
Fri, Apr 18, 2025  1:56:37 PM: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
ef5fc2a
Fri, Apr 18, 2025  1:58:56 PM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
60aad9b
Fri, Apr 18, 2025  1:59:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
f522295
Fri, Apr 18, 2025  2:00:20 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
ae25f3c
Fri, Apr 18, 2025  2:01:51 PM: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  15|2
total_score: 50/70
1508952
Fri, Apr 18, 2025  2:02:11 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
c49560d
Fri, Apr 18, 2025  2:02:40 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|2
total_score: 50/70
0cf6b8b
Fri, Apr 18, 2025  2:04:11 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|2
total_score: 50/70
7e505a5
Fri, Apr 18, 2025  2:05:01 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  16|1
total_score: 60/70
a3c0cbb
Fri, Apr 18, 2025  2:13:43 PM: 
 hashmap.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  0|0
009197e
